--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "NODE_ENV=production node . ",
     "dev": "NODE_ENV=development nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "copy": "cp utils.js ./functions"
+    "copy": "cp *.js ./functions"
   },
   "keywords": [],
   "author": "",
