--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.0",
+    "bufferutil": "^4.0.1",
     "cheerio": "^1.0.0-rc.3",
     "date-fns": "^2.16.1",
     "discord.js": "^12.4.1",
     "dotenv": "^8.2.0",
-    "lodash": "^4.17.20"
+    "erlpack": "github:discord/erlpack",
+    "lodash": "^4.17.20",
+    "utf-8-validate": "^5.0.2",
+    "zlib-sync": "^0.1.7"
   }
 }
